# compute-permit-simulator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  BEST_PRACTICES.md  Dockerfile  LICENSE  Makefile  README.md  TODO_EMLYN.md  TODO_EMLYN_DOMAIN.md  TODO_TEAM.md  app.py  main.py  pyproject.toml  verify_app.py  verify_export_import.py
.github/prompts/: python_standards.prompt.md
.github/workflows/: ci.yml
docs/: parameter_reference_lite.md
documents/: Constraint-to-Parameter Mapping Table (with Scenario Calibration)..md  TECHNICAL_DOCUMENTATION.md
scenarios/: EXAMPLE_1_baseline.json  EXAMPLE_2_permit_scarcity.json  EXAMPLE_3_high_risk.json  EXAMPLE_6_reputation_matters.json  EXAMPLE_7_enforcement_failure.json  EXAMPLE_baseline.json  EXAMPLE_enforcement_failure.json  EXAMPLE_high_risk.json  EXAMPLE_marginal_deterrence.json  EXAMPLE_near_collapse.json  EXAMPLE_permit_scarcity.json  EXAMPLE_reputation_matters.json  EXAMPLE_strict_audit.json  config.json  sample_1_baseline.json  sample_2_permit_scarcity.json  sample_3_high_risk.json  sample_4_marginal_deterrence.json  sample_5_strict_audit.json  sample_6_reputation_matters.json  sample_7_enforcement_failure.json  scenario_1_lawless.json  scenario_1_minimal.json  scenario_2_crisis.json  scenario_2_strict.json  scenario_3_maxwell.json  scenario_3_smart.json  scenario_4_dynamic.json  scenario_run_s.json  test.json
scripts/: collect_code.py
source/: Week_2_simulation_architecture_josh.md  technical_specification.md
src/compute_permit_sim/: __init__.py  schemas.py
src/cpm_simulator/: __init__.py  agents.py  market.py  model.py
tests/: conftest.py  factories.py  test_advanced_scenarios.py  test_basics.py  test_config_manager.py  test_dynamics.py  test_export.py  test_integration.py  test_market.py  test_metrics.py  test_model.py  verify_config_manager.py  verify_solara_backend.py
tests/core/: test_agents.py  (+2 more)
(+75 files in other folders)
