[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_permit_sim"]

[project]
name = "aisc-cm-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mesa>=3.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "solara>=1.57.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "pytest>=9.0.2", "ruff>=0.14.14"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
