[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_permit_sim"]

[project]
name = "aisc-cm-simulator"
version = "0.1.0"
description = "Agent-based simulation of compute permit markets and deterrence dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mesa>=3.4.2",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "solara>=1.57.2",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pypdf>=6.7.0",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
